fix stuck fab button

--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -116,10 +116,6 @@ main-home {
   }
 }
 
-ion-fab.float {
-  position: fixed;
-}
-
 ion-header.transparent {
   .toolbar {
     position: absolute;
